# Change Log
All notable changes to this project will be documented in this file.
The format is based on [Keep a Changelog](http://keepachangelog.com/) 
and this project adheres to [Semantic Versioning](http://semver.org/).

## [0.1.1] 2017 Mar 24
#### Notes
- most data generated by lbm is 0
- testes 1 proc, correct
## [0.1.0] 2017 Mar 23
#### Changed
- removed blocks, now each process need to prepare contiguous buffer for adios
#### To do
- use small size, verify the correctness of data read



