@@ -27,8 +27,8 @@ DS_SERVER=${PBS_O_HOME}/envs/Dataspacesroot/bin/dataspaces_server
 PBS_RESULTDIR=${PBS_O_WORKDIR}/results/${SLURM_JOBID}
 
 PROCS_SERVER=1
-PROCS_PRODUCER=1
-PROCS_CONSUMER=4
+PROCS_PRODUCER=4
+PROCS_CONSUMER=8
 
 DS_CLIENT_PROCS=$((${PROCS_PRODUCER} + ${PROCS_CONSUMER}))
 
