@@ -7,6 +7,9 @@ and this project adheres to [Semantic Versioning](http://semver.org/).
 #### Notes
 - most data generated by lbm is 0
 - testes 1 proc, correct
+#### ADD
+- add analysis component
+
 ## [0.1.0] 2017 Mar 23
 #### Changed
 - removed blocks, now each process need to prepare contiguous buffer for adios
